# off-grid-primitives

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml
src/account/: README.md
src/asset/: README.md
src/spot/: README.md  event.rs  market.rs  matching_engine.rs  orderbook.rs  orders.rs  pair.rs
tests/: account.rs  orders.rs  spot_tests.rs
tests/spot/: l1.rs  l2.rs  l3.rs
tests/spot/matching_engine/: add_pair.rs  cancel_order.rs  limit_buy.rs  limit_sell.rs  market_buy.rs  market_sell.rs  mod.rs
tests/spot/orderbook/: mod.rs  order_placement.rs  snapshot.rs  trading.rs
tests/spot/pair/: event_assertion.rs  limit_buy.rs  limit_sell.rs  market_buy.rs  market_sell.rs  mod.rs  slippage.rs  snapshot.rs
